--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-  "name": "klaytn-snap",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "build:clean": "yarn clean && yarn build",
-    "clean": "rimraf dist/*",
-    "build": "mm-snap build",
-    "serve": "mm-snap serve",
-    "postinstall": "patch-package"
-  },
-  "devDependencies": {
-    "@metamask/key-tree": "^4.0.0",
-    "@metamask/snaps-cli": "^0.18.1",
-    "caver-js": "^1.9.0",
-    "patch-package": "^6.4.7",
-    "postinstall-postinstall": "^2.1.0",
-    "rimraf": "^3.0.2",
-    "underscore": "^1.13.4"
-  },
-  "dependencies": {}
+    "name": "klaytn_snap",
+    "private": true,
+    "scripts": {
+        "patch:snap": "yarn workspace @klaytn_snap/snap install",
+        "compile": "tsc -b -w -i",
+        "eslint": "eslint src/**/**.{ts,tsx}",
+        "eslint:fix": "eslint src/**/**.{ts,tsx} --fix",
+        "build:snap": "yarn workspace @klaytn_snap/snap build",
+        "start:snap": "yarn workspace @klaytn_snap/snap serve",
+        "start:example": "yarn workspace @klaytn_snap/example start",
+        "setup": "yarn && yarn run patch:snap && yarn run build:snap",
+        "build": "yarn workspaces foreach -vpt run build",
+        "demo:local": "concurrently  --raw --kill-others \"yarn run start:snap\" \"yarn run start:example\"",
+        "demo": "yarn run demo:local"
+    },
+    "devDependencies": {
+        "@types/node": "^18.7.15",
+        "concurrently": "^7.1.0",
+        "ts-node": "^10.9.1"
+    },
+    "workspaces": [
+        "packages/*"
+    ],
+    "dependencies": {
+        "typescript": "^4.8.2"
+    }
 }
