--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example",
+  "name": "@klaytn_snap/example",
   "version": "2.1.0",
   "private": true,
   "license": "(Apache-2.0 AND MIT)",
