--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -7,8 +7,7 @@
     "build:clean": "yarn clean && yarn build",
     "clean": "rimraf dist/*",
     "build": "mm-snap build",
-    "serve": "mm-snap serve",
-    "postinstall": "patch-package"
+    "serve": "mm-snap serve"
   },
   "devDependencies": {
     "@metamask/key-tree": "^4.0.0",
