--- a/package.json
+++ b/package.json
@@ -1,26 +1,13 @@
 {
   "name": "klaytn-snap",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "license": "MIT",
   "scripts": {
-    "build:clean": "yarn clean && yarn build",
-    "clean": "rimraf dist/*",
-    "build": "mm-snap build",
-    "serve": "mm-snap serve",
-    "backend": "node app.js",
-    "postinstall": "patch-package"
-  },
-  "devDependencies": {
-    "@metamask/key-tree": "^4.0.0",
-    "@metamask/snaps-cli": "^0.18.1",
-    "caver-js": "^1.9.0",
-    "patch-package": "^6.4.7",
-    "postinstall-postinstall": "^2.1.0",
-    "rimraf": "^3.0.2",
-    "underscore": "^1.13.4"
+    "start": "node app.js"
   },
   "dependencies": {
+    "caver-js": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1"
